# replicator

./: CONFIGURATION.md  LICENSE  README.md  channels.ini.example  default.nix  replicator.cabal
examples/: dumps.ini  multi-mariadb.ini  rds-master.ini  rds-slave.ini  rdsdump.bash  single.ini
src/: Main.hs  Replicator.hs
src/Replicator/: Action.hs  Command.hs  CommandLine.hs  Compress.hs  Config.hs  Flags.hs  Regex.hs  Timeline.hs
