name: replicator
version: 0.3.0
synopsis: Automate creating MySQL multi-source slaves
description:
    This is a utility to automate DB replication for
    MySQL database family. It is primary aimed for multi-source
    replication (MariaDB >= 10.0.1 and MySQL >= 5.7),
    but can be used for a single-source replication.
license: MIT
license-file: LICENSE
author: Igor Pashev
maintainer: Igor Pashev <pashev.igor@gmail.com>
copyright: 2014, Zalora South East Asia Pte. Ltd
category: Database
build-type: Simple
extra-source-files:
    README.md
    examples/*.ini
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/zalora/replicator.git

executable replicator
    main-is: Replicator.hs
    other-modules:
        Replicator.Action,
        Replicator.Compress,
        Replicator.Config,
        Replicator.Flags,
        Replicator.Regex
    build-depends:
        base >=4.6 && <5,
        ConfigFile,
        MissingH,
        bytestring,
        containers,
        directory,
        filepath,
        hflags,
        lens-family-core >=1.1.0,
        mtl,
        pipes,
        pipes-bytestring,
        pipes-group >=1.0.1,
        pipes-safe,
        pipes-shell,
        pipes-zlib >=0.4.3,
        raw-strings-qq,
        regex-applicative,
        transformers
    hs-source-dirs: src
    default-language: Haskell2010

